[metadata]
name = cl_search
version = 0.1
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    beautifulsoup4>=4.10
    pandas>=2.1
    requests>=2
    selenium>=4.14
python_requires = >=3.8

[options.packages.find]
exclude =
    test*
    testing*

[options.extras_require]
testing =
    pytest>=6

[options.package_data]
cl_search = py.typed

[coverage:run]
plugins = covdefaults

[flake8]
max-line-length = 160
