[metadata]
name = cl_search
version = 1.0
long_description = file: README.adoc
long_description_content_type = text/plain
url = https://github.com/gavink97/cl-search
author = Gavin Kondrath
author_email = 78187175+gavink97@users.noreply.github.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    SQLAlchemy>=2
    beautifulsoup4>=4.10
    pandas>=2.1
    python-dotenv
    requests>=2
    selenium>=4.14
    toml
    tqdm
python_requires = >=3.8

[options.packages.find]
exclude =
    test*
    testing*

[options.entry_points]
console_scripts =
    cl = cl_search.main:run

[options.extras_require]
testing =
    pytest>=6

[options.package_data]
cl_search = py.typed

[coverage:run]
plugins = covdefaults

[flake8]
max-line-length = 160
exclude = tests/class_cl_item_test.py
